URLEncoder.encode updated to match Java 17 version